--- a/SaltLife/Base.lproj/LaunchScreen.storyboard
+++ b/SaltLife/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="NotoSans-BoldItalic.ttf">
+            <string>NotoSans-BoldItalic</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -15,8 +21,32 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_2521" translatesAutoresizingMaskIntoConstraints="NO" id="kRv-nR-kH1">
+                                <rect key="frame" x="168" y="141" width="264" height="317"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="264" id="AM9-MP-5z2"/>
+                                    <constraint firstAttribute="height" constant="317" id="MZ2-kl-LvF"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BAM!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Un7-zx-9vA">
+                                <rect key="frame" x="168" y="466" width="264" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="5JQ-O9-4rS"/>
+                                    <constraint firstAttribute="width" constant="264" id="l2Q-bG-lhj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="NotoSans-BoldItalic" family="Noto Sans" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.82592907969999996" blue="0.65851330689999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="kRv-nR-kH1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HnN-Uh-JgZ"/>
+                            <constraint firstItem="Un7-zx-9vA" firstAttribute="top" secondItem="kRv-nR-kH1" secondAttribute="bottom" constant="8" id="eVP-c6-KZv"/>
+                            <constraint firstItem="kRv-nR-kH1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="hnK-k4-sss"/>
+                            <constraint firstItem="Un7-zx-9vA" firstAttribute="centerX" secondItem="kRv-nR-kH1" secondAttribute="centerX" id="viO-kq-VEW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +54,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="IMG_2521" width="777" height="1070"/>
+    </resources>
 </document>
