--- a/SaltLife/Base.lproj/Main.storyboard
+++ b/SaltLife/Base.lproj/Main.storyboard
@@ -206,7 +206,7 @@
                                 <rect key="frame" x="20" y="64" width="560" height="536"/>
                                 <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="366" id="88T-xP-EvU" customClass="PostCell" customModule="SaltLife" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" id="88T-xP-EvU" customClass="PostCell" customModule="SaltLife" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="560" height="366"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="88T-xP-EvU" id="lYo-Nd-5oE">
@@ -217,10 +217,10 @@
                                                     <rect key="frame" x="0.0" y="8" width="566" height="349"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="6io-Le-Nzp">
-                                                            <rect key="frame" x="46" y="8" width="341" height="334"/>
+                                                            <rect key="frame" x="46" y="8" width="344" height="334"/>
                                                             <subviews>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="i5j-if-Bfo">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="341" height="50"/>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="i5j-if-Bfo">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="344" height="50"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="fff-QN-0DE">
                                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -229,17 +229,17 @@
                                                                                 <constraint firstAttribute="height" constant="50" id="ZKc-h7-rhT"/>
                                                                             </constraints>
                                                                         </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="johntfrost" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="rZ3-8x-Sr8">
-                                                                            <rect key="frame" x="55" y="0.0" width="86" height="50"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="DonaldDuck" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="rZ3-8x-Sr8">
+                                                                            <rect key="frame" x="50" y="0.0" width="104" height="50"/>
                                                                             <fontDescription key="fontDescription" name="NotoSans-Bold" family="Noto Sans" pointSize="17"/>
                                                                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="heart-empty" translatesAutoresizingMaskIntoConstraints="NO" id="q7s-gq-XC0">
-                                                                            <rect key="frame" x="146" y="0.0" width="150" height="50"/>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="heart-empty" translatesAutoresizingMaskIntoConstraints="NO" id="q7s-gq-XC0">
+                                                                            <rect key="frame" x="154" y="0.0" width="150" height="50"/>
                                                                         </imageView>
-                                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="h7J-AP-NK6">
-                                                                            <rect key="frame" x="301" y="0.0" width="40" height="50"/>
+                                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="h7J-AP-NK6">
+                                                                            <rect key="frame" x="304" y="0.0" width="40" height="50"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="1500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5YU-Zg-B38">
                                                                                     <rect key="frame" x="0.0" y="0.0" width="40" height="24"/>
@@ -265,8 +265,8 @@
                                                                         </mask>
                                                                     </variation>
                                                                 </stackView>
-                                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UHa-q0-gaD">
-                                                                    <rect key="frame" x="0.0" y="55" width="341" height="70"/>
+                                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UHa-q0-gaD">
+                                                                    <rect key="frame" x="0.0" y="55" width="344" height="70"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="7W5-lT-CFa"/>
@@ -277,10 +277,20 @@
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                                                 </textView>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="screen" translatesAutoresizingMaskIntoConstraints="NO" id="ZhH-LW-ady">
-                                                                    <rect key="frame" x="0.0" y="130" width="341" height="204"/>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="screen" translatesAutoresizingMaskIntoConstraints="NO" id="ZhH-LW-ady">
+                                                                    <rect key="frame" x="0.0" y="130" width="344" height="204"/>
                                                                 </imageView>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="i5j-if-Bfo" firstAttribute="leading" secondItem="6io-Le-Nzp" secondAttribute="leading" id="4Ue-XJ-sYZ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="i5j-if-Bfo" secondAttribute="trailing" constant="5" id="b2S-HV-Ueh"/>
+                                                            </constraints>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="4Ue-XJ-sYZ"/>
+                                                                    <exclude reference="b2S-HV-Ueh"/>
+                                                                </mask>
+                                                            </variation>
                                                         </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -311,6 +321,8 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
+                                            <outlet property="descriptionText" destination="UHa-q0-gaD" id="RFU-Pt-xj2"/>
+                                            <outlet property="likesLbl" destination="5YU-Zg-B38" id="94z-e6-MMG"/>
                                             <outlet property="profileImg" destination="fff-QN-0DE" id="N6K-Bc-DH8"/>
                                             <outlet property="showcaseImg" destination="ZhH-LW-ady" id="hKh-a0-4Ch"/>
                                         </connections>
