--- a/SaltLife/Base.lproj/LaunchScreen.storyboard
+++ b/SaltLife/Base.lproj/LaunchScreen.storyboard
@@ -29,7 +29,7 @@
                                     <constraint firstAttribute="width" constant="264" id="l2Q-bG-lhj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="NotoSans-Italic" family="Noto Sans" pointSize="24"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="saltlife-logo" translatesAutoresizingMaskIntoConstraints="NO" id="kRv-nR-kH1">
